# federal-payroll-prediction

./: .gitignore  README.md  app.py  pyproject.toml
scripts/: fetch_and_profile_data.py  process_opm_fedscope.py
