[project]
name = "federal-payroll-prediction"
version = "0.1.0"
description = "Educational Streamlit app for comparing regression losses on salary prediction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "plotly>=6.0",
    "pyarrow>=20.0",
    "scikit-learn>=1.6",
    "streamlit>=1.44",
    "torch>=2.6",
    "lightning>=2.5",
]

[tool.uv]
package = false
